--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,2 +1,44 @@
+name: Build GifToSyphon with Custom API Key
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: macos-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install Dependencies
+        run: |
+          # Install required tools and dependencies
+          brew install cmake
+          brew install sdl2  # if SDL2 is a dependency for GifToSyphon
+
+      - name: Inject API Key
+        run: |
+          # Replace placeholder in code with your API key
+          sed -i '' "s/YOUR_API_KEY_PLACEHOLDER/${{ secrets.API_KEY }}/g" src/config.h  # Adjust path if necessary
+
+      - name: Build GifToSyphon
+        run: |
+          mkdir build
+          cd build
+          cmake ..  # Generate makefiles
+          make      # Build the project
+
+      - name: Upload GifToSyphon Build
+        if: success()
+        uses: actions/upload-artifact@v2
+        with:
+          name: GifToSyphon_Build
+          path: build/GifToSyphon.app  # Adjust path to match the app output location
 
 
