--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build:
@@ -18,19 +19,21 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          # Install required tools and dependencies
           brew install cmake
           brew install sdl2  # if SDL2 is a dependency for GifToSyphon
 
       - name: Inject API Key
         run: |
+          # Replace placeholder in code with your API key
           sed -i '' "s/YOUR_API_KEY_PLACEHOLDER/${{ secrets.API_KEY }}/g" AppDelegate.m
 
       - name: Build GifToSyphon
         run: |
           mkdir build
           cd build
-          cmake ..
-          make
+          cmake ..  # Generate makefiles
+          make      # Build the project
 
       - name: Zip the Application
         run: |
@@ -43,12 +46,3 @@ jobs:
         with:
           name: GifToSyphon_Build
           path: build/GifToSyphon_Build.zip
-          on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch:
-
